feat: Update project dependencies and improve code readability; refactor method visibility and use modern Java features