@@ -7,7 +7,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @RestController
 @RequestMapping("/uploads")
@@ -15,7 +14,7 @@ public class UploadsController {
 
     @GetMapping("/{filename:.+}")
     public ResponseEntity<Resource> serveFile(@PathVariable String filename) throws Exception {
-        Path file = Paths.get("uploads").resolve(filename);
+        Path file = Path.of("uploads").resolve(filename);
         Resource resource = new UrlResource(file.toUri());
         if (!resource.exists() || !resource.isReadable()) {
             throw new RuntimeException("Could not read file: " + filename);
